fix: align left

--- a/src/styles/Soullink.css
+++ b/src/styles/Soullink.css
@@ -35,6 +35,6 @@
     color: azure;
     font-weight: bold;
     font-family: 'Signika', sans-serif;
-    text-align: center;
+    text-align: left;
     filter: drop-shadow(3px 3px 3px #222);
 }
